# llm-as-judge-examples

./: LICENSE  README.md  pyproject.toml  pytest.ini
case-01/: llm_test_unit.ipynb
case-02/: llm_test_dota2.py  repository_llm.py
case-03/: llm_test_judge.py
